<resources>
    <string name="app_name">Quiz Maker</string>
    <string name="question_text">Constantinople is the largest city in Turkey</string>
    <string name="true_button_text">True</string>
    <string name="false_button_text">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button_text">Next</string>
    <string name="prev_button_text">Prev</string>
    <string name="cur_score">"Your Score: "</string>
    <string name="high_score">"High Score: "</string>
</resources>
